infra/templates/ui/digital-hosp-frontend/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digital-hosp-frontend-svc
  labels:
    app: digital-hosp-frontend
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: digital-hosp-frontend
