infra/templates/ui/digital-hosp-frontend/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digital-hosp-frontend-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: jolly-crucial-stork.ngrok-free.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: digital-hosp-frontend-svc
            port:
              number: 8000
